08/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      volumes:
      - name: code
        persistentVolumeClaim:
          claimName: code
      containers:
      - name: php
        image: amarrak/site:v1.16
        volumeMounts:
          - name: code
            mountPath: /code
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /myapp/. /code"]

#        initContainers:
#        - name: install
#          image: busybox
#          volumeMounts:
#          - name: code
#            mountPath: /code
#          command:
#          - wget
#          - "-O"
#          - "/code/index.php"
#          - https://raw.githubusercontent.com/amarrak/kube/master/index.php
