08/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
#  namespace: myapp
  labels:
    app: pro-monitor
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
    name: web
  type: NodePort
